Modify ProfileImage and Conttact Icons

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
           <div class="col col1 col-lg-4 col-md-4 col-sm-4">
             <div class="row">
               <figure class="col" style="padding: 20px;">
-                <img src="images/lady-img.jpg" alt="My-Image" class="my-image">
+                <img src="images/myImage.png" alt="My-Image" class="my-image">
               </figure>
             
          
-            <div class="col" style="padding: 15px;">
+            <div class="col">
               <h3>Suhas Pulikkal</h3>
               <address>
                 #6 3rd main <br>
@@ -353,9 +353,9 @@
   <!--**************************FOOTER SECTION**************************-->
   <footer class="bg-dark">
     <div id="footer">
-      <i class="fa-brands fa-facebook"></i>
-      <i class="fa-brands fa-square-twitter"></i>
-      <i class="fa-brands fa-instagram"></i>
+      <a href="https://facebook.com/suhaspulikkal" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+      <a href="https://twitter.com/suhaspulikkal" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+      <a href="https://www.instagram.com/sparky_pulikkal/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
       <p>© Copyright Suhas Pulikkal</p>
     </div>
 
